# clone-competition-simulation

./: .gitignore  LICENSE  MANIFEST.in  README.md  environment.yml  example_run_config.yml  mkdocs.yml  pyproject.toml  run_config.yml  setup.cfg  setup.py
Tutorials/: 1.Introduction.ipynb  1.Introduction.md  10.SimulatingBiopsies.ipynb  10.SimulatingBiopsies.md  11.Animation.ipynb  12.Colours.ipynb  13.EarlyStoppingConditions.ipynb  16.StoringAndLoadingSimulations.ipynb  16.StoringAndLoadingSimulations.md  2.Algorithms.ipynb  3.SimulationLength.md  4.DefiningInitialCloneSizes.md  5.DefiningInitialCloneFitness.md  7.Mutations.ipynb  7.Mutations.md  8.Mutations2.ipynb  8.Mutations2.md  9.Mutations3.md  BasicOptions.ipynb  Colours.ipynb  DefiningInitialCloneFitness.ipynb  DefiningInitialCloneSizes.ipynb  DefiningInitialClones.ipynb  DifferentiatedCells.ipynb  EarlyStoppingConditions.ipynb  LineageTracingSimulations.ipynb  Mutations3.ipynb  README.md  Treatments.ipynb
clone_competition_simulation/: __init__.py  animator.py  branching_process.py  colourscales.py  fitness_classes.py  general_2D_class.py  general_differentiated_cell_class.py  general_sim_class.py  moran.py  moran2D.py  parameters.py  sim_sampling.py  stop_conditions.py  useful_functions.py  wf.py  wf2D.py
docs/: Algorithms.md  Animation.md  Colours.md  CustomRules.md  DefiningInitialCloneFitness.md  DefiningInitialCloneSizes.md  DifferentiatedCells.md  EarlyStoppingConditions.md  Installation.md  Introduction.md  LineageTracingSimulations.md  Mutations.md  Mutations2.md  Mutations3.md  RunConfigFile.md  SimulatingBiopsies.md  SimulationLength.md  StoringAndLoadingSimulations.md  Treatments.md  index.md
tests/: conftest.py  (+2 more)
(+119 files in other folders)
